add PWA functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,12 @@
       <button mat-flat-button  color="primary" matStepperNext>Los geht's</button>
     </div>
   </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
-    <ng-template matStepLabel>Ruheumsatz (RMR)</ng-template>
+  <mat-step>
+    <ng-template matStepLabel>RMR</ng-template>
 <app-rmr-step></app-rmr-step>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>Aktivitätslevel (PAL)</ng-template>
+    <ng-template matStepLabel>PAL</ng-template>
     Als Aktivitätslevel (engl. "Physical Activity Level"), auch Leistungsumsatz oder Arbeitsumsatz genannt, wird diejenige Energiemenge definiert, die der Mensch über den Grundumsatz hinaus für Arbeitstätigkeiten umsetzt.
 
     Welches Aktivitätslevel trifft auf Sie am meisten zu?
