--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,32 @@
-
-<mat-toolbar color="primary">
+<mat-toolbar class="my-toolbar" color="primary">
   <span>Macro Calculator</span>
 </mat-toolbar>
 <mat-horizontal-stepper [linear]=true #stepper>
   <mat-step>
-    <ng-template matStepLabel>Intro</ng-template>
-<app-intro></app-intro>
-    <div>
-      <button mat-flat-button  color="primary" matStepperNext>Los geht's</button>
+    <ng-template matStepLabel>RMR</ng-template>
+    <app-intro></app-intro>
+    <app-rmr-step></app-rmr-step>
+    <div class="mt-1">
+      <button mat-flat-button color="primary" matStepperNext>Weiter</button>
     </div>
   </mat-step>
   <mat-step>
-    <ng-template matStepLabel>RMR</ng-template>
-<app-rmr-step></app-rmr-step>
-  </mat-step>
-  <mat-step>
     <ng-template matStepLabel>PAL</ng-template>
-    Als Aktivitätslevel (engl. "Physical Activity Level"), auch Leistungsumsatz oder Arbeitsumsatz genannt, wird diejenige Energiemenge definiert, die der Mensch über den Grundumsatz hinaus für Arbeitstätigkeiten umsetzt.
+    Als Aktivitätslevel (engl. "Physical Activity Level"), auch Leistungsumsatz oder Arbeitsumsatz genannt, wird
+    diejenige Energiemenge definiert, die der Mensch über den Grundumsatz hinaus für Arbeitstätigkeiten umsetzt.
 
     Welches Aktivitätslevel trifft auf Sie am meisten zu?
-    <div>
-      <button mat-flat-button  color="primary" matStepperNext>Weiter</button>
+    <div class="mt-1">
+      <button mat-flat-button color="secondary" matStepperPrevious>Zurück</button>
+      <button mat-flat-button color="primary" matStepperNext>Weiter</button>
     </div>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Ergebnis</ng-template>
     You are now done.
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button (click)="stepper.reset()">Reset</button>
+    <div class="mt-1">
+      <button mat-flat-button color="primary" matStepperPrevious>Back</button>
+      <button mat-flat-button color="secondary" (click)="stepper.reset()">Reset</button>
     </div>
   </mat-step>
 </mat-horizontal-stepper>
