--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,5 +1,5 @@
 
-<div class="mat-body"> Der MakroCalculator berechnet dir deinen Kalorienbedarf und die dazugehörige Makronährstoff Verteilung in zwei Schritten. Dabei wird der tägliche Kalorienbedarf aus Ruheumsatz (RMR) und dem Aktivitätslevel (PAL) berechnet.
+<div class="mat-body explaining"> Der MakroCalculator berechnet dir deinen Kalorienbedarf und die dazugehörige Makronährstoff Verteilung in zwei Schritten. Dabei wird der tägliche Kalorienbedarf aus Ruheumsatz (RMR) und dem Aktivitätslevel (PAL) berechnet.
 </div>
-<div class="mat-body-strong">Täglicher Energiebedarf = RMR * PAL </div>
+<div class="mat-body-strong explaining">Täglicher Energiebedarf = RMR * PAL </div>
 
