--- a/src/app/rmr-step/rmr-step.component.html
+++ b/src/app/rmr-step/rmr-step.component.html
@@ -1,13 +1,36 @@
+<mat-card>
+  <mat-card-title>
+    Ruheumsatz (RMR)
+  </mat-card-title>
+  <mat-card-subtitle>
+    Der Ruheumsatz/Grundumsatz (engl. Resting Metabolic Rate) ist eine Größe zur Charakterisierung des Stoffwechsels.
+    Sie ist die Energiemenge, die der Körper pro Tag bei völliger Ruhe, bei 28 °C und nüchtern (d. h. mit leerem Magen)
+    zur Aufrechterhaltung seiner Funktionen benötigt.
+  </mat-card-subtitle>
 
-Der Ruheumsatz/Grundumsatz (engl. Resting Metabolic Rate) ist eine Größe zur Charakterisierung des Stoffwechsels. Sie ist die Energiemenge, die der Körper pro Tag bei völliger Ruhe, bei 28 °C und nüchtern (d. h. mit leerem Magen) zur Aufrechterhaltung seiner Funktionen benötigt.
-
-  <form [formGroup]="secondFormGroup">
-    <mat-form-field>
-      <input matInput placeholder="Gewicht (kg)" formControlName="secondCtrl" required>
-    </mat-form-field>
+  <mat-card-content>
     <div>
-      <button mat-button matStepperPrevious>Zurück</button>
-      <button mat-button matStepperNext>Weiter</button>
+      <label id="gender-label">Geschlecht </label>
+      <mat-radio-group aria-labelledby="gender-label" class="my-radio-group" [(ngModel)]="gender"
+                       (change)="calculateRMR()">
+        <mat-radio-button class="my-radio-button" value="male">männlich</mat-radio-button>
+        <mat-radio-button class="my-radio-button" value="female">weiblich</mat-radio-button>
+      </mat-radio-group>
     </div>
-  </form>
-
+    <div>
+      <label>Altersgruppe </label>
+      <mat-radio-group class="my-radio-group" [(ngModel)]="age" (change)="calculateRMR()">
+        <mat-radio-button class="my-radio-button" value="0">10-18</mat-radio-button>
+        <mat-radio-button class="my-radio-button" value="1">19-30</mat-radio-button>
+        <mat-radio-button class="my-radio-button" value="2">31-60</mat-radio-button>
+        <mat-radio-button class="my-radio-button" value="3">>60</mat-radio-button>
+      </mat-radio-group>
+    </div>
+    <div>
+      <mat-form-field>
+        <input [(ngModel)]="weight" matInput placeholder="Gewicht (kg)" (change)="calculateRMR()" required>
+      </mat-form-field>
+    </div>
+    <div *ngIf="calories" class="mat-h2">RMR: {{calories}} Kcal</div>
+  </mat-card-content>
+</mat-card>
