make stepper visible again

--- a/src/app/landingpage/landingpage.component.scss
+++ b/src/app/landingpage/landingpage.component.scss
@@ -1,8 +1,12 @@
-.my-toolbar{
+.my-toolbar {
   position: fixed;
   z-index: 2;
 }
 
-.mt-1{
+.mt-1 {
   margin-top: 1rem;
+}
+
+.placeholder {
+  height: 4rem;
 }
