--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar class="my-toolbar" color="primary">
   <span>Macro Calculator</span>
 </mat-toolbar>
+<div class="placeholder"></div>
 <mat-horizontal-stepper [linear]=true #stepper>
   <mat-step>
     <ng-template matStepLabel>RMR</ng-template>
