calculate total calories
- use german locale for number formatting

--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -13,20 +13,17 @@
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>PAL</ng-template>
-    Als Aktivitätslevel (engl. "Physical Activity Level"), auch Leistungsumsatz oder Arbeitsumsatz genannt, wird
-    diejenige Energiemenge definiert, die der Mensch über den Grundumsatz hinaus für Arbeitstätigkeiten umsetzt.
-
-    Welches Aktivitätslevel trifft auf Sie am meisten zu?
+    <app-pal></app-pal>
     <div class="mt-1">
       <button mat-flat-button color="secondary" matStepperPrevious>Zurück</button>
-      <button mat-flat-button color="primary" matStepperNext>Weiter</button>
+      <button mat-flat-button color="primary" [disabled]="service.pal === undefined" matStepperNext>Weiter</button>
     </div>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Ergebnis</ng-template>
-    You are now done.
+    <app-result></app-result>
     <div class="mt-1">
-      <button mat-flat-button color="primary" matStepperPrevious>Back</button>
+      <button mat-flat-button color="primary" matStepperPrevious>Zurück</button>
       <button mat-flat-button color="secondary" (click)="stepper.reset()">Reset</button>
     </div>
   </mat-step>
